# ce-datascience

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  package.json
.agents/plugins/: marketplace.json
.ce-datascience/: config.local.example.yaml
.claude-plugin/: CHANGELOG.md  marketplace.json
.cursor-plugin/: CHANGELOG.md  marketplace.json
.github/: .release-please-manifest.json  release-please-config.json
.github/workflows/: deploy-docs.yml  release-preview.yml
docs/: guide-for-r-biostatisticians.md
docs/brainstorms/: 2026-04-27-ce-datascience-fork-requirements.md
docs/plans/: 2026-04-27-001-feat-ce-datascience-fork-plan.md  2026-04-29-001-feat-competitive-feature-port-plan.md
plugins/ce-datascience/skills/ce-mcp-server/mcp_server/: __init__.py  __main__.py  pyproject.toml  run.py
src/: index.ts
tests/: ce-demo-reel.test.ts  claude-parser.test.ts  cli.test.ts  codex-converter.test.ts  codex-writer.test.ts  compound-support-files.test.ts  converter.test.ts  copilot-converter.test.ts  frontmatter-validator.test.ts  frontmatter.test.ts  gemini-writer.test.ts  kiro-writer.test.ts  legacy-cleanup.test.ts  legacy-registry-invariants.test.ts  manifest-path-safety.test.ts  opencode-writer.test.ts  path-sanitization.test.ts  pi-writer.test.ts  pipeline-review-contract.test.ts  plugin-legacy-artifacts.test.ts  plugin-path.test.ts  release-components.test.ts  release-config.test.ts  release-metadata.test.ts  release-preview.test.ts  resolve-base-script.test.ts  review-skill-contract.test.ts  session-history-scripts.test.ts  skill-shell-safety.test.ts
(+247 files in other folders)
